[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Dr_Coomer"
version = "0.0.1"
authors = [
  { name="Dr_Coomer", email="isfortner@gmail.com" },
]
description = "A really bad game framework written in python, for Linux."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Linux",
    "License :: OSI Approved :: GPL License",
]

[project.urls]
Homepage = "https://github.com/yoshisaac/python-game-framework"
